@@ -1,10 +1,0 @@
-name    'yguenane/repoforge'
-version '0.2.0'
-source 'https://github.com/Spredzy/puppet-repoforge'
-author 'Yanis Guenane <yguenane@gmail.com>'
-license 'Apache License, Version 2.0'
-summary 'A Puppet Module that installs rpmforge\'s repos '
-description 'A Puppet Module that installs rpmforge\'s repos '
-project_page 'https://github.com/Spredzy/puppet-repoforge'
-
-dependency 'puppetlabs/stdlib', '>= 3.2.0'
